test/parallel/forall/may-vs-must-par/stmt-mustpar-err-inst2ser.chpl
use datas;

// error - parallel instator is not provided
forall IND in zip(inst1ser, inst2ser) do
  writeln("forall IND in zip(inst1ser, inst2ser)");
